kubernetes/kustomize/app/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: { }
  template:
    metadata:
      labels:
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: ACCESS_TOKEN_EXPIRY
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: ACCESS_TOKEN_EXPIRY
            - name: ACCESS_TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  name: app-secret
                  key: ACCESS_TOKEN_SECRET
            - name: DB_DAILECT
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: DB_DAILECT
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: DB_DATABASE
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: DB_HOST
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: app-secret
                  key: DB_PASSWORD
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: DB_PORT
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: app-secret
                  key: DB_USERNAME
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: PORT
            - name: REFRESH_TOKEN_COOKIE_NAME
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: REFRESH_TOKEN_COOKIE_NAME
            - name: REFRESH_TOKEN_EXPIRY
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: REFRESH_TOKEN_EXPIRY
            - name: REFRESH_TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  name: app-secret
                  key: REFRESH_TOKEN_SECRET
          image: 4natole/tp-node:1.0
          name: app
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      restartPolicy: Always
status: { }
